# building-mongo-cxx-driver-using-cmake

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
cmake/: FindMongoDB.cmake
